--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,31 @@ li {
   list-style: none;
 }
 
+.hidden {
+  opacity: 0;
+}
+
+.copy-message {
+  position: fixed;
+  z-index: 7;
+  margin: auto;
+  bottom: 3.75rem;
+  padding: 12px 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 15px;
+  background: rgba(0, 0, 0, 0.368627451);
+  transition: opacity 300ms ease-out;
+}
+.copy-message p {
+  font-family: 'Roboto';
+  font-weight: normal;
+  font-size: 1rem;
+  line-height: 1.25;
+  color: white;
+  text-align: center;
+}
+
 /*------------------------------ Header Start ------------------------------*/
 header div.center {
   margin-top: 4.875rem;
@@ -430,32 +455,52 @@ main section.center div.img-container img {
 /*------------------------------ Footer Start ------------------------------*/
 footer.center {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   margin-top: 5.75rem;
   margin-bottom: 1.75rem;
   flex-wrap: wrap;
 }
 footer.center a {
-  font-family: 'Roboto';
-  font-weight: normal;
-  font-size: 3.125rem;
-  line-height: 1.22;
-  color: white;
-  text-decoration: underline;
   transition: color 150ms ease-out;
-  text-transform: capitalize;
 }
 footer.center a:first-of-type {
+  display: inline-block;
   width: 4.6875rem;
+  margin-right: auto;
 }
 footer.center a:first-of-type img {
   width: 100%;
   aspect-ratio: 1/1;
-  margin-right: 1.5625rem;
 }
-footer.center a:hover {
-  color: rgb(194, 194, 194);
+footer.center a[data-contact] {
+  aspect-ratio: 1/1;
+  width: 3.125rem;
+  overflow: hidden;
+  margin-right: 0.9375rem;
+}
+footer.center a[data-contact][data-phone]::before {
+  background: url('../images/phone.svg') no-repeat;
+  background-size: 3.125rem 3.125rem;
+}
+footer.center a[data-contact][data-email]::before {
+  background: url('../images/email.svg') no-repeat;
+  background-size: 3.125rem 3.125rem;
+}
+footer.center a[data-contact][data-facebook]::before {
+  background: url('../images/facebook.svg') no-repeat;
+  background-size: 3.125rem 3.125rem;
+}
+footer.center a[data-contact]::before {
+  content: '';
+  display: inline-block;
+  width: 3.125rem;
+  aspect-ratio: 1/1;
+  filter: invert(100%);
+  transition: filter 150ms ease-out;
+}
+footer.center a[data-contact]:hover::before {
+  filter: invert(85%);
 }
 
 /*------------------------------ Footer End ------------------------------*/
